# create-kr-patch-template

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
adapters/emucap/: README.md
assets/fonts/: README.md
assets/translation/: README.md
conformance/: README.md  build-mode.json  product-graph.json  roundtrip.json  runtime-evidence.json  write-plan.json
reference/python/poc/: scan_ascii.py  scan_ascii_tests.py
reference/rust/: Cargo.toml
reference/rust/crates/patch-guard/: Cargo.toml
reference/rust/crates/patch-guard-mcp/: Cargo.toml
reference/rust/crates/patch-guard-mcp/src/: lib.rs  main.rs  mcp.rs  mcp_tests.rs  tools.rs  tools_tests.rs
reference/rust/crates/patch-guard/src/: artifact_graph.rs  artifact_graph_tests.rs  build_mode.rs  build_mode_tests.rs  lib.rs  report.rs  report_tests.rs  roundtrip.rs  roundtrip_tests.rs  runtime_evidence.rs  runtime_evidence_tests.rs  source.rs  source_tests.rs  write_plan.rs  write_plan_tests.rs
reference/rust/crates/patch-guard/src/write_plan/: apply.rs  validation.rs
reference/rust/crates/patch-guard/tests/: build_mode_conformance_tests.rs  conformance.rs  layout_tests.rs  product_graph_conformance_tests.rs  roundtrip_conformance_tests.rs  runtime_evidence_conformance_tests.rs  write_plan_conformance_tests.rs
reference/rust/crates/patch-guard/tests/support/: mod.rs
reference/rust/examples/synthetic-cli/: Cargo.toml
reference/rust/examples/synthetic-cli/assets/: demo.complete.json  demo.in-progress.json
reference/rust/examples/synthetic-cli/src/: main.rs  target.rs  target_tests.rs  translation.rs
src/: README.md
