[package]
name = "patch-guard"
description = "Platform-neutral validation guards for reproducible binary patch builds"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
