[package]
name = "synthetic-cli"
description = "Self-authored example CLI for the patch template"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
patch-guard = { path = "../../crates/patch-guard" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
